Updated design and fixed layout issue

--- a/currency.css
+++ b/currency.css
@@ -5,7 +5,6 @@
 } 
 body{
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     height: 100vh;
@@ -14,21 +13,21 @@ body{
 .currency-container{
    
     background-color: rgb(241, 245, 244);
-    width: 16rem;
-    height: 18rem;
+    width: 15rem;
+    height: 17rem;
     padding: 1rem;
     border-radius: 7px;
     box-shadow: 5px 10px 60px 10px rgba(0,0,0,0.3);
     border: 6px solid lightgray;     /* upar mota */
-    margin-top: -125px;
     transition: transform 0.3s ease;
+    margin-top: 6rem;
  }
  input{
     border: 2px solid lightgray;
     border-radius: 10px;
     height: 2.50rem;
-    width: 16rem;
-    margin-top: 1rem;
+    width: 15rem;
+    margin-top: 6px;
     padding-left: 5px;
     box-shadow:0 0 10px rgba(0,0,0,0.3) ;
  }
@@ -48,10 +47,10 @@ body{
     justify-content: center;
     align-items: center;
     background-color:rgb(245, 239, 239);
-    width: 7rem;
+    width: 6.7rem;
     height: 3rem;
-    border-radius: 12px;
-    font-size: small;
+    border-radius: 11px;
+    font-size: 11px;
     border: 2px solid lightgrey;
     box-shadow:0 0 10px rgba(0,0,0,0.3) ;
     gap: 3px;
@@ -61,19 +60,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    width:7rem;
+    width:6.6rem;
     height: 3rem;
     background-color:rgb(245, 239, 239);
-    border-radius: 12px;
+    border-radius: 11px;
     font-size: small;
     border: 2px solid lightgrey;
     box-shadow:0 0 10px rgba(0,0,0,0.3) ;
     gap: 3px;
  }
  .submit{
-    margin-top: 1.50rem;
     height: 35px;
-    width: 16rem;
+    width: 14.5rem;
     background-color: blueviolet;
     color: white;
     cursor: pointer;
@@ -81,6 +79,8 @@ body{
     border-radius: 12px;
     box-shadow:0 0 15px 0px blueviolet ;
     transition: transform 0.3s ease;
+    margin-top: 1rem;
+    margin-left: 5px;
 
  }
  select{
@@ -91,15 +91,15 @@ body{
    margin-top: 7px;
  }
  .p1{
-   margin-top: 1rem;
+   margin-top: 1.2rem;
    margin-left: 5px;
 
  }
  #p2{
-   margin-top: 1.5rem;
    margin-left: 10px;
    font-weight: 500;
    font-size: medium;
+   margin-top: 1rem;
  }
  .icon{
    margin-top: 2px;
@@ -125,6 +125,16 @@ footer{
    color: #111827;
    background-color: #E5E7EB;
    margin-bottom: 1.5rem;
-   padding-top:4px ;
+   padding-top:5px ;
    font-weight: 100;
+}
+.heading{
+   font-size: x-large;
+   font-weight: 700;
+   margin-top: 7px;
+}
+input::placeholder {
+  color: #b3b3b3;
+  opacity: 1;
+  font-size: 10px;
 }
